# vcom_yuman_sync

./: .env.example  .gitignore  Makefile  README.md  VERIFICATION_POST_MIGRATION.md  __init__.py  config.py  db.py  models.py  pyproject.toml  requirements.txt  smart_import_solution.py  supabase_setup.py  sync_new_sites_20251128_161425.json  sync_new_sites_20251128_162156.json  sync_new_sites_20251128_162420.json  sync_new_sites_20251128_162657.json  sync_new_sites_20251128_162950.json  sync_new_sites_20251128_163318.json  sync_new_sites_20251128_165033.json  vcom_client.py  yuman_client.py
.github/workflows/: auto_merge_sites.yml  ci.yml  ciyml.txt  sync-new-sites.yml  sync-tickets.yml  sync_analytics_monthly.yml  sync_ppc_weekly.yml  sync_supabase_yuman.yml  sync_vcom_updates.yml  sync_yuman_supabase.yml  weekly_wo_report.yml
logs/: test_adapters_E3K2L_20251028_113600.json  test_inverter_models_20251030_143003.json
migrations/: add_vcom_meter_id_cache.sql
scripts/: backfill_wo_comments.py  diag_sb_to_yuman.py  generate_weekly_report.py  import_vcom.py  import_yuman.py  investigate_missing_wr1.py  supabase_setup.py  validate_sb_to_yuman_fixes.py
scripts/diagnostics/: compare_2025.py  compare_3_sources.py  diagnose_site_diff.py  diagnostic_site_conflicts.py
sql/: verify_post_migration.sql
src/: logging.py
tests/: conftest.py  test_db_connection.py  test_db_supabase.py  test_inverter_parser.py  test_protection_donnees.py  test_sim_protection.py  test_supabase_adapter.py  test_supabase_api.py  test_vcom.py  test_vcom_api.py  test_yuman_client.py
(+61 files in other folders)
