[tool.poetry]
name = "vcom-yuman-sync"
version = "0.1.0"
description = ""
authors = []

package-mode = true      # <- active l'installation du package

packages = [
  { include = "vysync", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
python-dotenv = "^1.1.0"
supabase = "^2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ruff = "^0.11.13"
requests-mock = "^1.12.1"


